# OtaniDojo20210629

./: arrays_common.h  arrays_common.hpp
array/: CMakeLists.txt  array1.h  array1.hpp  array2.h  array2.hpp  test_array1.cpp  test_array2.cpp
arrays/: CMakeLists.txt  arrays.h  arrays_common.cpp  arrays_common.h  arrays_common.hpp
arrays/array/: array1.cpp  array1.hpp  array2.h  array2.hpp
arrays/array/test_array1/: CMakeLists.txt  test_array1.cpp
arrays/array/test_array2/: CMakeLists.txt  test_array2.cpp
arrays/tensor/: sym_tensor2.cpp  sym_tensor2.h  sym_tensor4.cpp  sym_tensor4.h  tensor1.cpp  tensor1.h  tensor2.cpp  tensor2.h
arrays/tensor/test_sym_tensor2/: CMakeLists.txt  test_sym_tensor2.cpp
arrays/tensor/test_sym_tensor4/: CMakeLists.txt  test_sym_tensor4.cpp
arrays/tensor/test_tensor1/: CMakeLists.txt  test_tensor1.cpp
arrays/tensor/test_tensor2/: CMakeLists.txt  test_tensor2.cpp
arrays/vector/: .gitignore  matrix.h  matrix.hpp  vector.h  vector.hpp
arrays/vector/test_matrix/: CMakeLists.txt  test_matrix.cpp
arrays/vector/test_vector/: CMakeLists.txt  test_vector.cpp
tensor/: CMakeLists.txt  sym_tensor2.h  sym_tensor2.hpp  sym_tensor4.h  sym_tensor4.hpp  tensor1.h  tensor1.hpp  tensor2.h  tensor2.hpp  test_sym_tensor2.cpp  test_sym_tensor4.cpp  test_tensor1.cpp  test_tensor2.cpp
vector/: .gitignore  CMakeLists.txt  matrix.h  matrix.hpp  test_matrix.cpp  test_vector.cpp  vector.h  vector.hpp
